<resources>
    <string name="app_name">CloudMusic</string>
    <string name="推荐歌单">推荐歌单</string>
    <string name="独家放送">独家放送</string>
    <string name="主播电台">主播电台</string>
    <string name="最新音乐">最新音乐</string>
    <string name="推荐MV">推荐MV</string>
    <string name="全部歌单">全部歌单</string>
    <string name="精品歌单">精品歌单</string>
    <string name="a4z">本地音乐</string>
    <string name="a55">最近播放</string>
    <string name="a4y">下载管理</string>
    <string name="a4w">我的歌手</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">设置</string>
    <string name="exit">退出应用</string>
    <string name="tips1">登录网易云音乐</string>
    <string name="tips2">320K高音质无限下载，手机电脑多端同步</string>
    <string name="login_side">立即登录</string>
    <string name="inbox">私信</string>
    <string name="comment">评论</string>
    <string name="notification">通知</string>
    <string name="how_activity_shop">如何赚积分</string>
    <string name="bill_activity_shop">我的订单</string>
    <string name="integral_activity_shop">积分</string>
    <string name="vip_tips">你的帐号存在风险，请尽快登录！</string>
    <string name="foot_tips"><u>帮助和反馈</u></string>
    <string name="online_music_tips">最低<font color='red'>9元</font>起，听歌，下载，看MV，统统免流量！</string>
    <string name="online_liantong_left">￥9/月<font color='red'>（免费赠送3天）</font></string>


</resources>
