<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/headerviewbg"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips1"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />
    <TextView
        android:id="@+id/tv_tips2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips2" />

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btn_login_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_side"
        android:background="@drawable/loginbg"
        android:textSize="@dimen/font_size"/>

</LinearLayout>