<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/headertitle"/>
    <ScrollView
        android:id="@+id/shop_scrollview_activity_shop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/integral_activity_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/how_activity_shop"
                    android:background="@color/white"
                    android:text="@string/integral_activity_shop"
                    android:textSize="@dimen/font_size_s"/>
                <Button
                    android:id="@+id/bill_activity_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/how_activity_shop"
                    android:background="@color/white"
                    android:text="@string/bill_activity_shop"
                    android:textSize="@dimen/font_size_s"
                    />
                <Button
                    android:gravity="center"
                    android:id="@+id/how_activity_shop"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_s"
                    android:text="@string/how_activity_shop"
                    android:drawableTop="@drawable/how_activity_shop"
                    android:background="@color/white"/>
                </LinearLayout>
                <ViewFlipper
                    android:id="@+id/vf_activity_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ViewFlipper>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:layout_marginTop="@dimen/padding_margin_10"
                android:text="热门商品"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/shop_v_line_activity_shop"/>

            <com.example.administrator.cloudmusic.utils.MyGridView
                android:id="@+id/shop_gb_activity_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.example.administrator.cloudmusic.utils.MyGridView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
